Button align fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,7 @@ h1, h2{
     margin: 0;
 }
 
+
 h2{
     color: $branding-color-secondary;
     font-size: 2em;
@@ -183,6 +184,10 @@ h2{
     a{
         text-decoration: none;
     }
+}
+
+.add-btn-sites{
+    height: 100%;
 }
 
 @keyframes reveal {
